--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
+        "persian-date": "^1.1.0",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
@@ -24,6 +25,8 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "element-ui": "^2.11.1"
+        "element-ui": "^2.11.1",
+        "highcharts": "^7.2.0",
+        "highcharts-vue": "^1.3.5"
     }
 }
